# uni-fanlp

./: CHANGELOG.md  Cargo.toml  README.md  uni-funlog.cabal
app/: Colors.hs  Extras.hs  Main.hs  MyPrelude.hs  Parser.hs  User.hs  sample.ini
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
haskell/: haskell.cabal
